--- a/PeakHours_Blazor/_Imports.razor
+++ b/PeakHours_Blazor/_Imports.razor
@@ -8,3 +8,17 @@
 @using Microsoft.JSInterop
 @using PeakHours_Blazor
 @using PeakHours_Blazor.Shared
+@using Radzen.Blazor
+@using Radzen
+
+@using CurrieTechnologies.Razor.SweetAlert2;
+@using PeakHours_Blazor.Services;
+@using Microsoft.EntityFrameworkCore;
+@using PeakHours_Blazor.Interfaces;
+@using ClosedXML.Excel;
+@using SolucionPeakHours.Shared.UserAccount
+@using SolucionPeakHours.Shared.FactoryStaff
+@using PeakHours_Blazor.Helpers
+@using PeakHours_Blazor.Models
+@using Microsoft.AspNetCore.Authorization
+@using Microsoft.AspNetCore.Components
