--- a/PeakHours_Blazor/Shared/NavMenu.razor
+++ b/PeakHours_Blazor/Shared/NavMenu.razor
@@ -1,33 +1,69 @@
-﻿<div class="top-row ps-3 navbar navbar-dark">
+﻿@using PeakHours_Blazor.Helpers
+<div class="top-row ps-3 navbar navbar-dark">
     <div class="container-fluid">
-        <a class="navbar-brand" href="">PeakHours_Blazor</a>
-        <button title="Navigation menu" class="navbar-toggler" @onclick="ToggleNavMenu">
+        <a class="navbar-brand" href="">CND</a>
+        <button title="Navigation menu" class="navbar-toggler " @onclick="ToggleNavMenu">
             <span class="navbar-toggler-icon"></span>
         </button>
     </div>
 </div>
 
-<div class="@NavMenuCssClass nav-scrollable" @onclick="ToggleNavMenu">
+
+
+<div class="@NavMenuCssClass min-nav nav-scrollable "Style="background-color:#003053; color: #FFF""" @onclick="ToggleNavMenu">
     <nav class="flex-column">
-        <div class="nav-item px-3">
+        <div class="nav-item px-2">
             <NavLink class="nav-link" href="" Match="NavLinkMatch.All">
-                <span class="oi oi-home" aria-hidden="true"></span> Home
+                <span class="oi oi-home" aria-hidden="true"></span> Inicio
             </NavLink>
         </div>
-        <div class="nav-item px-3">
-            <NavLink class="nav-link" href="counter">
-                <span class="oi oi-plus" aria-hidden="true"></span> Counter
+       
+        @if (IsAdmin)
+        {
+            <div class="nav-item px-2">
+                <NavLink class="nav-link" href="/employee/index">
+                    <span class="oi oi-people" aria-hidden="true"></span> Empleados
+                </NavLink>
+            </div>
+        }
+
+        <div class="nav-item px-2">
+            <NavLink class="nav-link" href="/progHour/index">
+                <span class="oi oi-timer" aria-hidden="true"></span> Horas programadas
             </NavLink>
         </div>
-        <div class="nav-item px-3">
-            <NavLink class="nav-link" href="fetchdata">
-                <span class="oi oi-list-rich" aria-hidden="true"></span> Fetch data
+
+
+        <div class="nav-item px-2">
+            <NavLink class="nav-link" href="/completedHour/index">
+                <span class="oi oi-circle-check" aria-hidden="true"></span> Horas completadas
             </NavLink>
+
         </div>
+        
+        @if(IsAdmin || IsGerenteArea)
+        {
+            <div class="nav-item px-2">
+                <NavLink class="nav-link" href="/user/index">
+                    <span class="oi oi-people" aria-hidden="true"></span> Usuarios
+                </NavLink>
+            </div>
+        }
     </nav>
-</div>
+</div> 
+
+<style>
+    .min-nav {
+        min-width: 250px;
+    }
+</style>
 
 @code {
+    [Inject] BeamAuthenticationStateProviderHelper BeamAuthenticationStateProviderHelper { get; set; }
+
+    private bool IsAdmin { get; set; }
+    private bool IsGerenteArea { get; set; }
+
     private bool collapseNavMenu = true;
 
     private string? NavMenuCssClass => collapseNavMenu ? "collapse" : null;
@@ -35,5 +71,13 @@
     private void ToggleNavMenu()
     {
         collapseNavMenu = !collapseNavMenu;
+    }
+
+    protected override async Task OnInitializedAsync()
+    {
+        var authState = await BeamAuthenticationStateProviderHelper.GetAuthenticationStateAsync();
+
+        IsAdmin = authState.User.IsInRole("Administrator");
+        IsGerenteArea = authState.User.IsInRole("GerenteArea");
     }
 }
